Thay đổi class Database Config